--- a/index.html
+++ b/index.html
@@ -177,116 +177,76 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/php1.png" alt="">
                     <h3>PHP</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/symfony_128x128.png" alt="">
                     <h3>Symfony</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/laravel_128.png" alt="">
                     <h3>Laravel</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/c_sharp_128.png" alt="">
                     <h3>C Sharp</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/dot_net_128.png" alt="">
                     <h3>.NET</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/java_128.png" alt="">
                     <h3>Java</h3>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/android.png" alt="">
                     <h3>Android</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
-                <div class="service-box">
-                    <img src="img/technologies/c_plus_plus_128_new.png" alt="">
-                    <h3>C++</h3>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/javascript_128.png" alt="">
                     <h3>JavaScript</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
-                <div class="service-box">
-                    <img src="img/technologies/jquery.png" alt="">
-                    <h3>jQuery</h3>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
-                <div class="service-box">
-                    <img src="img/technologies/node.png" alt="">
-                    <h3>Node.js</h3>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/css_logo_128.png" alt="">
                     <h3>CSS</h3>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
-                <div class="service-box">
-                    <img src="img/technologies/bootstrap_1281.png" alt="">
-                    <h3>Bootstrap</h3>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/html5_128.png" alt="">
                     <h3>HTML</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/mysql_128.png" alt="">
                     <h3>MySQL</h3>
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center">
                 <div class="service-box">
                     <img src="img/technologies/postgresql_128.png" alt="">
                     <h3>PostgreSQL</h3>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
-                <div class="service-box">
-                    <img src="img/technologies/sql_server.png" alt="">
-                    <h3>SQL Server</h3>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 text-center">
-                <div class="service-box">
-                    <img src="img/technologies/git_icon_128.png" alt="">
-                    <h3>Git</h3>
                 </div>
             </div>
         </div>
