programacion del portafolio

--- a/index.html
+++ b/index.html
@@ -296,9 +296,173 @@
     </div>
 </section>
 
-<section class="no-padding" id="portfolio">
+<section id="portfolio">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Portafolio</h2>
+                <hr class="primary">
+            </div>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
+            <!--<div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/hpe%20speed/Captura.PNG" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>-->
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/calisoft/calisoft.PNG" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    CALISOFT
+                                </div>
+                                <div class="project-category text-faded">
+                                    Plataforma web para evaluación de software desarrollado para la Universidad de Cundinamarca
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/hegacof/Captura.PNG" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    HEGACOF
+                                </div>
+                                <div class="project-category text-faded">
+                                    Plataforma desarrollada para empresa de flores implementando el modelo gerencial benchmarking para el analisis de la competencia
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/tienda%20musical/inicio/inicio.png" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    MUSIC STORE
+                                </div>
+                                <div class="project-category text-faded">
+                                    Tienda musical online para la venta de instrumentos y accesorios musicales de toda clase, con videos y herramientas innovadoras
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/ssi/Captura.PNG" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    SSI
+                                </div>
+                                <div class="project-category text-faded">
+                                    Software de seguridad informatica desarrollado con el fin de permitir a cualquier auditor generar informes dinamicos y facilitar
+                                    el proceso de evaluación de incidentes informáticos encontrados dentro de una organización.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/amcom/2.jpg" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    AMCOM
+                                </div>
+                                <div class="project-category text-faded">
+                                    Aplicación móvil nativa desarrollada para encriptación de datos a través de la esteganografía
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/gambatte/2.jpg" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    Ganbatte
+                                </div>
+                                <div class="project-category text-faded">
+                                    Plataforma web desarrollada para ofrecer los productos y servicios de un restaurante
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/resultados%20futbol/Captura.PNG" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    Apuestas online
+                                </div>
+                                <div class="project-category text-faded">
+                                    Pagina desarrollada con el fin de guardar apuestas sobre resultados de partidos de futbol
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="img-portafolio">
+                    <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box img-br">
+                        <img src="img/portafolio/game%20node/Captura3.PNG" class="img-responsive img-br" alt="">
+                        <div class="portfolio-box-caption img-br">
+                            <div class="portfolio-box-caption-content img-br">
+                                <div class="project-name">
+                                    Trivia kids
+                                </div>
+                                <div class="project-category text-faded">
+                                    Tradicional juego de trivia desarrollado para niños que esten aprendiendo a leer y a asociar las palabras con animales u objetos
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!---
             <div class="col-lg-4 col-sm-6 img-portafolio">
                 <a href="img/portafolio/tienda%20musical/administrador/admin.png" class="portfolio-box">
                     <img src="img/portafolio/tienda%20musical/inicio/inicio.png" class="img-responsive" alt="">
@@ -388,7 +552,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div>--->
         </div>
     </div>
 </section>
