mejoras generales de colores y aspecto visual

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Andrés Monroy - web programmer</title>
-    <link rel="icon" type="image/png" href="img/027.jpg"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
             <div class="col-md-12 box-info">
                 <div class="row">
                     <div class="col-md-6 center-block info info-left">
-                        <img class="img-circle img-photo" alt="" src="img/027.jpg">
+                        <img class="img-circle img-photo" alt="" src="img/Andres%20Monroy.jpg">
                     </div>
                     <div class="col-md-6 center-block info info-right" >
                         <div class="info-in">
@@ -96,6 +96,7 @@
                                         322-2443623
                                     </div>
                                 </div>
+
                                 <div class="row-info">
                                     <div class="bold-info">
                                         Correo:
@@ -106,10 +107,10 @@
                                 </div>
                                 <div class="row-info">
                                     <div class="bold-info">
-                                        Dirección:
+                                        Ciudad:
                                     </div>
                                     <div>
-                                        Bogotá, Colombia
+                                        Cali, Colombia
                                     </div>
                                 </div>
                                 <div class="row-info">
@@ -144,10 +145,9 @@
 </header>
 
 <section class="bg-primary" style="
-              background: #3CA55C;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #B5AC49, #3CA55C);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #B5AC49, #3CA55C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+          background:  #9FA50A;
+          box-shadow: inset 0 0 105px black;
         " id="about">
     <div class="container">
         <div class="row">
@@ -155,14 +155,13 @@ background: linear-gradient(to right, #B5AC49, #3CA55C); /* W3C, IE 10+/ Edge, F
                 <h2 class="section-heading">Perfil Profesional</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi autem dolor doloribus eaque expedita, fuga laboriosam modi, necessitatibus nobis possimus quasi quos recusandae temporibus vitae. Dolorum, numquam sint. Aliquid! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur consequuntur distinctio dolorem ducimus est facere, fuga, magnam molestiae officiis perferendis qui quod rem repellat similique suscipit velit veritatis?
-                </p>
+                    Ingeniero de sistemas con formación integral, honesto, comprometido, analítico, proactivo, responsable y dedicado a mis labores, con experiencia en desarrollo de proyectos de gran impacto para importantes compañías, cuento con buena actitud para el trabajo en equipo, aprendo con rapidez nuevas ideas y conceptos y me gusta estar en constante aprendizaje para desarrollar soluciones creativas e innovadoras, dominio de diferentes lenguajes de programación especialmente orientados a la web tales como C#, ASP .NET, Java, JavaScript, PHP, entre otros, con buen nivel de inglés y pasión por la música.                </p>
             </div>
         </div>
     </div>
 </section>
 
-<section id="services">
+<section id="services" style="color:white;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -249,9 +248,10 @@ background: linear-gradient(to right, #B5AC49, #3CA55C); /* W3C, IE 10+/ Edge, F
     </div>
 </section>
 
-<section id="portfolio" style="background: #070000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #070000, #4C0001, #070000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #070000, #4C0001, #070000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+<section id="portfolio" style="
+    background:  #01B3A4;
+    box-shadow: inset 0 0 105px black;
+
 ">
     <div class="container">
         <div class="row">
@@ -458,16 +458,20 @@ background: linear-gradient(to right, #070000, #4C0001, #070000); /* W3C, IE 10+
 
 
 
-<section id="contact" style="background: #ECE9E6;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+<section id="contact" style="
+    background:  #019BBD;
+    color: white;
+    box-shadow: inset 0 0 105px black;
+    font-size: 21px;
 ">
-    <div class="container" style="margin-top: 14vh; margin-bottom: 14vh;">
+    <div class="container" style="">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contacto</h2>
                 <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <br><br>
+                <p>Si quieres comunicarte conmigo puedes llamarme o escribirme y te respondere tan pronto como sea posible!!</p>
+                <br><br>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x sr-contact"></i>
